# fast-flashtalk

./: .gitignore  README.md  generate_video.py  ideas.md  pyproject.toml  requirements.txt  run.py
fast_flashtalk/: __init__.py  quantize.py  utils.py
fast_flashtalk/gemlite/triton_kernels/: gemm_splitK_kernels.py  gemv_revsplitK_kernels.py  utils.py
fast_flashtalk/kernels/: rope.py
fast_flashtalk/layers/: attention.py
fast_flashtalk/models/: t5.py
flash_talk/: inference.py  pipeline.py  quantize.py  vram_management.py
flash_talk/configs/: __init__.py  multitalk_14b.py
flash_talk/gemlite/: bitpack.py
flash_talk/infinite_talk/audio_analysis/: torch_utils.py  wav2vec2.py
flash_talk/infinite_talk/configs/: __init__.py  wan_multitalk_14B.py
flash_talk/infinite_talk/distributed/: xdit_context_parallel.py
flash_talk/infinite_talk/modules/: multitalk_attention.py  multitalk_model.py
flash_talk/infinite_talk/utils/: multitalk_utils.py
flash_talk/kernels/: attention.py  attn.py
flash_talk/layers/: attention.py  rope.py
flash_talk/models/: clip.py  dit.py  t5.py
flash_talk/src/distributed/: usp_device.py
flash_talk/wan/modules/: __init__.py  attention.py  clip.py  model.py  vace_model.py
gemlite/: __init__.py  core.py  helper.py  quant_utils.py
gemlite/triton_kernels/: gemm_kernels.py  gemm_splitK_persistent_kernels.py  gemv_kernels.py  gemv_splitK_kernels.py
scripts/: profile_dit.py  quantize_nvfp4_w4a4_modal.py
src/fast_flashtalk/: __init__.py  nunchaku_backend.py  pipeline.py  quantize.py  utils.py
src/fast_flashtalk/gemlite/: core.py  (+3 more)
(+25 files in other folders)
