[project]
name = "fast-flashtalk"
version = "0.1.1"
description = "fast SoulX-FlashTalk for RTX 4090"
readme = "README.md"
authors = [
    { name = "osc", email = "790990241@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "diffusers==0.36.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "loguru>=0.7.3",
    "numpy>=2.4.3",
    "osc-data>=0.2.9.post1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pyloudnorm>=0.2.0",
    "regex>=2026.2.28",
    "sageattention==1.0.6",
    "torch>=2.8.0",
    "torchvision",
    "tqdm>=4.67.3",
    "transformers==4.46.3",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
